[gd_scene load_steps=16 format=2]

[ext_resource path="res://Scenes/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Ground.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scripts/World.gd" type="Script" id=3]
[ext_resource path="res://Scenes/UI.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/Bunny.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/Ready.tscn" type="PackedScene" id=6]
[ext_resource path="res://Assets/Sprites/cloudAtlas.tres" type="Texture" id=7]
[ext_resource path="res://Assets/Sprites/cloud.png" type="Texture" id=8]
[ext_resource path="res://Scenes/DeathScreen.tscn" type="PackedScene" id=9]
[ext_resource path="res://Scenes/PixelatedScreen.tscn" type="PackedScene" id=10]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 8 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 8 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 8 )
region = Rect2( 0, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 8 )
region = Rect2( 32, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 8 )
region = Rect2( 48, 16, 16, 16 )

[node name="World" type="Node2D"]
script = ExtResource( 3 )
offset = 7680.0
spawn_offset = 960.0
effective_width = 13440.0
bunny_amount = 18
bunny_scene = ExtResource( 5 )
warning_color = Color( 0.745098, 0.0705882, 0.313726, 1 )

[node name="PixelatedScreen" parent="." instance=ExtResource( 10 )]

[node name="Viewport" type="Viewport" parent="PixelatedScreen"]
size = Vector2( 1920, 1080 )
handle_input_locally = false
render_target_update_mode = 3
audio_listener_enable_2d = true

[node name="ParallaxBackground" type="ParallaxBackground" parent="PixelatedScreen/Viewport"]

[node name="ParallaxLayer" type="ParallaxLayer" parent="PixelatedScreen/Viewport/ParallaxBackground"]
motion_scale = Vector2( 0.5, 1 )
motion_mirroring = Vector2( 7680, 4320 )

[node name="ColorRect" type="ColorRect" parent="PixelatedScreen/Viewport/ParallaxBackground/ParallaxLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 7680.0
margin_bottom = 4320.0
color = Color( 0.513726, 0.462745, 0.611765, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cloud" type="Sprite" parent="PixelatedScreen/Viewport/ParallaxBackground/ParallaxLayer"]
scale = Vector2( 24, 24 )
texture = ExtResource( 7 )

[node name="Cloud2" type="Sprite" parent="PixelatedScreen/Viewport/ParallaxBackground/ParallaxLayer"]
position = Vector2( 2631.05, 835.112 )
scale = Vector2( 24, 24 )
texture = SubResource( 1 )

[node name="Cloud3" type="Sprite" parent="PixelatedScreen/Viewport/ParallaxBackground/ParallaxLayer"]
position = Vector2( 937.717, 2185.75 )
scale = Vector2( 24, 24 )
texture = SubResource( 2 )

[node name="Cloud4" type="Sprite" parent="PixelatedScreen/Viewport/ParallaxBackground/ParallaxLayer"]
position = Vector2( 5846.37, 1722.1 )
scale = Vector2( 24, 24 )
texture = SubResource( 3 )

[node name="Cloud5" type="Sprite" parent="PixelatedScreen/Viewport/ParallaxBackground/ParallaxLayer"]
position = Vector2( 5040.02, 391.62 )
scale = Vector2( 24, 24 )
texture = SubResource( 4 )

[node name="Cloud6" type="Sprite" parent="PixelatedScreen/Viewport/ParallaxBackground/ParallaxLayer"]
position = Vector2( 3921.21, 2548.6 )
scale = Vector2( 24, 24 )
texture = SubResource( 5 )

[node name="SpawnTick" type="Timer" parent="PixelatedScreen/Viewport"]
autostart = true

[node name="Ground" parent="PixelatedScreen/Viewport" instance=ExtResource( 2 )]

[node name="Bunnies" type="Node2D" parent="PixelatedScreen/Viewport"]

[node name="Player" parent="PixelatedScreen/Viewport" instance=ExtResource( 1 )]
position = Vector2( 0, -5069.06 )
scale = Vector2( 3, 3 )

[node name="Ready" parent="PixelatedScreen/Viewport" instance=ExtResource( 6 )]
margin_left = -960.0
margin_top = -5603.35
margin_right = -960.0
margin_bottom = -5603.35

[node name="UI" type="CanvasLayer" parent="PixelatedScreen/Viewport"]

[node name="UI" parent="PixelatedScreen/Viewport/UI" instance=ExtResource( 4 )]

[node name="DeathScreen" parent="PixelatedScreen/Viewport/UI" instance=ExtResource( 9 )]
visible = false

[connection signal="timeout" from="PixelatedScreen/Viewport/SpawnTick" to="." method="_on_SpawnTick_timeout"]
[connection signal="death" from="PixelatedScreen/Viewport/Player" to="." method="_on_Player_death"]
